Fix UI tests