@@ -558,7 +558,6 @@
 										--add-opens=com.avereon.xenon/com.avereon.xenon.notice=ALL-UNNAMED
 										--add-opens=com.avereon.xenon/com.avereon.xenon.product=ALL-UNNAMED
 										--add-opens=com.avereon.xenon/com.avereon.xenon.task=ALL-UNNAMED
-										--add-opens=com.avereon.xenon/com.avereon.xenon.task.chain=ALL-UNNAMED
 										--add-opens=com.avereon.xenon/com.avereon.xenon.tool=ALL-UNNAMED
 										--add-opens=com.avereon.xenon/com.avereon.xenon.tool.guide=ALL-UNNAMED
 										--add-opens=com.avereon.xenon/com.avereon.xenon.tool.product=ALL-UNNAMED
